--- a/package.json
+++ b/package.json
@@ -26,7 +26,9 @@
     "docs": "compodoc -p src/tsconfig.app.json -d docs",
     "docs:serve": "compodoc -p src/tsconfig.app.json -d docs -s",
     "prepush": "npm run lint:ci",
-    "release:changelog": "npm run conventional-changelog -- -p angular -i CHANGELOG.md -s"
+    "release:changelog": "npm run conventional-changelog -- -p angular -i CHANGELOG.md -s",
+    "cy:run_spec": "npx cypress run --spec 'cypress/integration/testWithPageObjects.spec.js' --headless --record --key 293a779b-b38f-4666-9cf3-3484e692cc3b",
+    "cy:run_browser": "npm run cy:run_spec -- --browser chrome --group Chrome --ci-build-id 1 && npm run cy:run_spec -- --browser firefox --group Firefox --ci-build-id 1"
   },
   "dependencies": {
     "@agm/core": "^1.1.0",
@@ -53,6 +55,7 @@
     "ckeditor": "4.7.3",
     "classlist.js": "1.1.20150312",
     "core-js": "2.5.1",
+    "cypress-plugin-snapshots": "^1.4.4",
     "echarts": "^4.0.2",
     "eva-icons": "^1.1.0",
     "intl": "1.2.5",
